# sci_agent_newton

./: .env  .env.example  README.md  discovery_report.md  discovery_report_dataprocessLLM.md  pyproject.toml  requirements.txt  run_agent.py
.obsidian/: workspace.json
autonomous_scientist/: __init__.py  agent.py  code_registry.py  code_runner.py  data_brain.py  hypothesis_registry.py  processing.py  reporting.py  tool_specs.py  universe.py  verification.py
generated_processors/: registry.json  step_002_analyze_data.py  step_002_analyze_data_repair.py  step_002_custom_data_analysis.py  step_002_estimate_kinematics.py  step_003_analyze_data.py  step_003_analyze_data_repair.py  step_003_custom_data_analysis.py  step_003_estimate_kinematics.py  step_004_analyze_data.py  step_004_custom_data_analysis.py  step_005_analyze_data.py  step_005_analyze_data_repair.py  step_005_custom_data_analysis.py  step_005_estimate_kinematics.py  step_006_analyze_data.py  step_006_analyze_data_repair.py  step_006_custom_data_analysis.py  step_006_estimate_kinematics.py  step_006_inspect_relationships.py  step_007_analyze_data.py  step_007_analyze_data_repair.py  step_007_custom_data_analysis.py  step_007_estimate_kinematics.py  step_008_analyze_data.py  step_008_analyze_data_repair.py  step_008_custom_data_analysis.py  step_009_analyze_data.py  step_009_analyze_data_repair.py  step_009_custom_data_analysis.py  step_009_estimate_kinematics.py  step_009_fit_relationship_model.py  step_010_analyze_data.py  step_010_analyze_data_repair.py  step_010_custom_data_analysis.py  (+111 more)
(+1 files in other folders)
